@@ -4,6 +4,7 @@ S3method(forestplot,default)
 S3method(heightDetails,xaxis)
 export(forestplot)
 export(fpColors)
+export(fpDrawBarCI)
 export(fpDrawCircleCI)
 export(fpDrawDiamondCI)
 export(fpDrawNormalCI)
