@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/forestplot_helpers.R
 \name{fpDrawNormalCI}
+\alias{fpDrawBarCI}
 \alias{fpDrawCircleCI}
 \alias{fpDrawDiamondCI}
 \alias{fpDrawNormalCI}
@@ -22,6 +23,9 @@ fpDrawPointCI(lower_limit, estimate, upper_limit, size, y.offset = 0.5,
   pch = 1, ...)
 
 fpDrawSummaryCI(lower_limit, estimate, upper_limit, size, col, y.offset = 0.5,
+  ...)
+
+fpDrawBarCI(lower_limit, estimate, upper_limit, size, col, y.offset = 0.5,
   ...)
 }
 \arguments{
@@ -72,7 +76,7 @@ corresponding to 10\% of the row height.}
 
 \item{pch}{Type of point see \code{\link[grid]{grid.points}} for details}
 
-\item{col}{The color of the summary diamond.}
+\item{col}{The color of the summary objecct}
 }
 \value{
 \code{void} The function outputs the line using grid compatible
